--- a/stevie/World/templates/index.html
+++ b/stevie/World/templates/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="latin1">
     <title>World Map</title>
-
-
     <style>
-        
     </style>
 </head>
 <body>
@@ -15,6 +12,7 @@
         <label for="country">Enter a country:</label>
         <input type="text" id="country" name="country" required>
         <button type="submit">Submit</button>
+        <button type="button" id="reset-button">Reset</button>
     </form>
     {% if message %}
         <p>{{ message }}</p>
@@ -26,9 +24,19 @@
         .then(data => {
             document.getElementById('svg-container').innerHTML = data;
         });
-    </script>
 
-    
-    
+    // Add event listener for the reset button
+    document.getElementById('reset-button').addEventListener('click', function() {
+        // Send an AJAX request to reset the selected_countries list
+        fetch('/reset')
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    // Reload the page to update the UI
+                    location.reload();
+                }
+            });
+    });
+    </script>
 </body>
 </html>
